--- a/src/main/resources/templates/edit_agenda.html
+++ b/src/main/resources/templates/edit_agenda.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Editar Agenda</title>
+<link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
 <body>
 	<div align="center">
