--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8"/>
-<title>Product Manager</title>
+<meta charset="utf-8" />
+<title>Agenda</title>
+<link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
 <body>
-<div align="center">
-    <h1>Agenda</h1>
-    <a href="new">Cadastre </a>
-    <br/><br/>
-    <table border="1" cellpadding="10">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Telefone</th>
-                <th>Endereco</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="agenda : ${listAgenda}">
-            	<td th:text="${agenda.id}">ID do registro</td>
-                <td th:text="${agenda.nome}">Nome</td>
-                <td th:text="${agenda.email}">Email</td>
-                <td th:text="${agenda.telefone}">Telefone</td>
-                <td th:text="${agenda.endereco}">Endereco</td>
-                <td>
-                	<a th:href="@{'/edit/' + ${agenda.id}}">Edit</a>
-                	&nbsp;&nbsp;&nbsp;
-                	<a th:href="@{'/delete/' + ${agenda.id}}">Delete</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>    
+	<div align="center">
+		<h1>AGENDA</h1>
+		<div class="container">
+		<table  class="table" cellpadding="10">
+			<thead>
+				<tr>
+					<th>ID</th>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Telefone</th>
+					<th>Endereço</th>
+					<th>Editar</th>
+					<th>Deletar</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="agenda : ${listAgenda}">
+					<td th:text="${agenda.id}">ID do registro</td>
+					<td th:text="${agenda.nome}">Nome</td>
+					<td th:text="${agenda.email}">Email</td>
+					<td th:text="${agenda.telefone}">Telefone</td>
+					<td th:text="${agenda.endereco}">Endereco</td>
+					<td><a th:href="@{'/edit/' + ${agenda.id}}">Editar</a></td>
+					<td><a th:href="@{'/delete/' + ${agenda.id}}">Deletar</a></td>
+				</tr>
+			</tbody>
+		</table>
+		</div>
+		<a href="new"><button class="btn btn-secondary btn-lg">Cadastrar novo registro </button></a>
+	</div>
+	<link rel="stylesheet"
+		th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />
+
+	<script th:src="@{/webjars/jquery/3.1.1/jquery.min.js}"></script>
+	<script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </body>
 </html>
