--- a/src/main/resources/templates/new_agenda.html
+++ b/src/main/resources/templates/new_agenda.html
@@ -7,8 +7,8 @@
 <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
 <body>
-	<div align="center">
-		<h1>Novo registro!</h1>
+	<div class="container" align="center">
+		<h1>CADASTRO</h1>
 		<div class="container">
 		<form action="#" th:action="@{/save}" th:object="${agenda}"
 			method="post">
@@ -43,6 +43,7 @@
 					<td colspan="2"><button class="btn btn-secondary btn-lg" type="submit">Cadastrar</button> </td>
 				</tr>
 			</table>
+	
 		</form>
 		</div>
 	</div>
