--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
+ <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta charset="utf-8" />
 <title>Agenda</title>
 <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
 <body>
-	<div align="center">
+	<div class="container" align="center">
 		<h1>AGENDA</h1>
 		<div class="container">
+		
+		
+		<!--  form action="pesquisarAgenda" method="post">
+		<label>Pequisa por nome</label>
+		<input name="nomepesquisa">
+	<button type="btn btn-secondary btn-lg">Buscar</button>
+-->
+
+
+</form>
 		<table  class="table" cellpadding="10">
 			<thead>
 				<tr>
@@ -20,6 +33,7 @@
 					<th>Endereço</th>
 					<th>Editar</th>
 					<th>Deletar</th>
+					<th>JSON</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -31,15 +45,14 @@
 					<td th:text="${agenda.endereco}">Endereco</td>
 					<td><a th:href="@{'/edit/' + ${agenda.id}}">Editar</a></td>
 					<td><a th:href="@{'/delete/' + ${agenda.id}}">Deletar</a></td>
+					<td><a th:href="@{'/json/' + ${agenda.id}}">JSON</a></td>
 				</tr>
 			</tbody>
 		</table>
 		</div>
 		<a href="new"><button class="btn btn-secondary btn-lg">Cadastrar novo registro </button></a>
+		<a href="/json"><button class="btn btn-secondary btn-lg">JSON (TODOS) </button></a>
 	</div>
-	<link rel="stylesheet"
-		th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />
-
 	<script th:src="@{/webjars/jquery/3.1.1/jquery.min.js}"></script>
 	<script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </body>
