--- a/src/main/resources/templates/new_agenda.html
+++ b/src/main/resources/templates/new_agenda.html
@@ -17,20 +17,20 @@
 				<tr>
 				<div class="form-group">
 					<td>Nome:</td>
-					<td><input class="form-control" type="text" th:field="*{nome}" /></td>
+					<td><input required class="form-control" maxlength="11" minlength="3" type="text" th:field="*{nome}"pattern="[A-Za-záàâãéèêíïóôõöúçñÁÀÂÃÉÈÍÏÓÔÕÖÚÇÑ ]+$" /></td>
 					</div>
 				</tr>
 				<tr>
 				<div>
 					<td>Email:</td>
-					<td><input class="form-control" type="text" th:field="*{email}" /></td>
+					<td><input required class="form-control" maxlength="32"  type="text" th:field="*{email}" /></td>
 					</div>
 				</tr>
 				
 				<tr>
 				<div>
 					<td>Telefone:</td>
-					<td><input class="form-control" type="text" th:field="*{telefone}" /></td>
+					<td><input class="form-control" type="text" minlength="10" maxlength="11" placeholder="ex:dd989898587" pattern="[0-9]+$" th:field="*{telefone}" /></td>
 					</div>
 				</tr>
 				<tr>
