--- a/src/main/resources/templates/new_agenda.html
+++ b/src/main/resources/templates/new_agenda.html
@@ -13,7 +13,7 @@
 		<form action="#" th:action="@{/save}" th:object="${agenda}"
 			method="post">
 
-			<table border="0" cellpadding="10">
+			<table class="table" cellpadding="10">
 				<tr>
 				<div class="form-group">
 					<td>Nome:</td>
